--- a/build.gradle
+++ b/build.gradle
@@ -83,4 +83,11 @@ dependencies {
     implementation 'org.slf4j:slf4j-api:1.7.30'
     implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 
+    // ORM Lite
+    implementation 'com.j256.ormlite:ormlite-core:5.1'
+    implementation 'com.j256.ormlite:ormlite-jdbc:5.1'
+
+    // Database driver
+    implementation 'com.h2database:h2:1.4.200'
+
 }
