feat(Entity): add utility class to help the model

--- a/build.gradle
+++ b/build.gradle
@@ -90,4 +90,8 @@ dependencies {
     // Database driver
     implementation 'com.h2database:h2:1.4.200'
 
+    // ToString provider.
+    implementation 'org.apache.commons:commons-lang3:3.10'
+
+
 }
