--- a/build.gradle
+++ b/build.gradle
@@ -80,8 +80,9 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0-M1'
 
     // SLF4J
-    implementation 'org.slf4j:slf4j-api:1.7.30'
+    implementation 'org.slf4j:slf4j-api:1.8.0-beta4'
     implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
+    implementation 'org.slf4j:slf4j-simple:1.8.0-beta4'
 
     // ORM Lite
     implementation 'com.j256.ormlite:ormlite-core:5.1'
@@ -92,6 +93,5 @@ dependencies {
 
     // ToString provider.
     implementation 'org.apache.commons:commons-lang3:3.10'
-
 
 }
